--- a/src/nav2_gps_waypoint_follower_demo/config/nav2_no_map_params.yaml
+++ b/src/nav2_gps_waypoint_follower_demo/config/nav2_no_map_params.yaml
@@ -405,11 +405,12 @@ docking_server:
 
     # Dock instances
     # The following example illustrates configuring dock instances.
-    # docks: ['home_dock']  # Input your docks here
-    # home_dock:
-    #   type: 'simple_charging_dock'
-    #   frame: map
-    #   pose: [0.0, 0.0, 0.0]
+    docks: ['home_dock']  # Input your docks here
+    
+    home_dock:
+      type: 'simple_charging_dock'
+      frame: map
+      pose: [38.161391054181276, -122.45464431092836, 0.0]
 
     controller:
       k_phi: 3.0
