--- a/src/nav2_gps_waypoint_follower_demo/package.xml
+++ b/src/nav2_gps_waypoint_follower_demo/package.xml
@@ -13,6 +13,7 @@
   <depend>mapviz</depend>
   <depend>mapviz_plugins</depend>
   <depend>tile_map</depend>
+  <depend>opennav_following</depend>
 
   <export>
     <build_type>ament_python</build_type>
