--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/navigation2"]
 	path = src/navigation2
 	url = https://github.com/ros-navigation/navigation2.git
+[submodule "src/nav2_minimal_turtlebot_simulation"]
+	path = src/nav2_minimal_turtlebot_simulation
+	url = https://github.com/ros-navigation/nav2_minimal_turtlebot_simulation.git
